force-app/main/default/objects/Opportunity/fields/Best_Sales_Agent__c.field-meta.xml
<CustomField>
    <fullName>Best_Sales_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sales agent who got the most Completed tours (this agent will receive some compensation)</inlineHelpText>
    <label>Best Sales Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>