force-app/main/default/objects/Opportunity/fields/Completed_Tours__c.field-meta.xml
<CustomField>
    <fullName>Completed_Tours__c</fullName>
    <label>Completed Tours</label>
    <summaryFilterItems>
        <field>Tour__c.Completed_on__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Tour__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>