force-app/main/default/objects/Opportunity/fields/Discount_Offered__c.field-meta.xml
<CustomField>
    <fullName>Discount_Offered__c</fullName>
    <inlineHelpText>Discount offered on the Completed Tour</inlineHelpText>
    <label>Discount offered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>